Fixed video overflow

--- a/main.css
+++ b/main.css
@@ -90,13 +90,21 @@
 
 /* STYLES FOR THE FIRST (main - landing) SECTION 
 <-------------------------------------------------------------------------------------------------------> */ 
-
+.nav-container {
+    width: 100%;
+    height: 80px;
+}
+.mainContainer {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+}
 .landing-Section {
    display: flex;
    justify-content: center;
    align-items: center;  
    width: 100%;
-   height: 89vh;
+   height: 100vh;
    background-color: rgba(0, 0, 0,0.6);
 }
 .landing-section-video {
